Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-01-05 (SVN):
    * Recompiled all win64 dlls and import libraries.
    * quakedef.h: updated beta date stamp to 2012-01-05.

2012-01-03 (SVN):
    * console.c: Console word wrap fix: only check and wrap at word
      boundaries, not in the middle of a word.

2012-01-02 (SVN):
    * timidity.h (struct _MidSongOptions): Added discard_meta member
      (actually changed the padding member) so that I can choose not to
      allocate and parse the metadata.
    * timidity_internal.h (struct _MidSong): Added discard_meta member.
    * timidity.c (mid_song_load): Set the song's discard_meta member.
    * readmidi.c (read_midi_event): Made to call mid_istream_skip()
      instead of read_meta_data() when the song's discard_meta option is
      set.
    * snd_timidity.c: Pass 1 to mid_song_load() as discard_meta option
      because we don't need the metadata.

2012-01-02 (SVN):
    * timidity: added include guards to all of the timidity headers.
    * quakedef.h: updated beta date stamp to 2012-01-02.

2012-01-01 (SVN):
    * timidity, options.h (DEFAULT_DRUMCHANNELS): Do not mark 16 as a
      drum channel. Noticed this in SDL_mixer bug #1352, fixed in their
      mercurial repo as of changeset 61a1516bc06a. Timidity++ does the
      same thing too.

2012-01-01 (SVN):
    * timidity: Made mid_istream_skip() to use the stream's associated
      seek function.

2012-01-01 (SVN):
    * timidity: Added /usr/local/share/timidity to the list of default
      paths.

2012-01-01 (SVN):
    * timidity, readmidi.c: Fixed parsing of certain MIDI files with
      extra data at the end of the tracks. Fix from SDL_mixer mercurial
      repository, changeset 7a8f0018e23d. The problem was described in
      libsdl bugzilla, http://bugzilla.libsdl.org/show_bug.cgi?id=1299

2012-01-01 (SVN):
    * timidity: Added mid_istream_seek and mid_istream_tell to the api.

2012-01-01 (SVN):